fixed contrast issue on red color

--- a/src/sass/partials/_variables.scss
+++ b/src/sass/partials/_variables.scss
@@ -4,7 +4,7 @@ $colours: (
   white: #ffffff,
   black: #000000,
   primary-color: rgba(0, 81, 255, 1),
-  error-message-color: rgba(232, 76, 60, 1),
+  error-message-color: rgb(188, 41, 25),
   success-message-color: rgba(46, 204, 113, 1),
 );
 
